...
        <scene sceneID="Nki-YV-4Qg">
            <objects>
                <splitViewController title="UIKitCatalog" id="H1p-Uh-vWS" sceneMemberID="viewController">
                    <toolbarItems/>
                    <connections>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="ActivityIndicatorViewController" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2br-gN-EbC">
                                                    <rect key="frame" x="15" y="25.5" width="163" height="13.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="AlertControllerViewController" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2sI-TM-th4">
                                                    <rect key="frame" x="15" y="25.5" width="154.5" height="13.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Buttons" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="IG2-PT-8SC">
                                                    <rect key="frame" x="15" y="6" width="56.5" height="19.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Kt-uW-BR1">
                                                    <rect key="frame" x="277" y="7" width="46" height="30"/>
                                                    <state key="normal" title="Button">
                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                    </state>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Simple" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="d6Q-Gp-MaT">
                                                    <rect key="frame" x="15" y="0.0" width="570" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Okay / Cancel" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="d0w-RT-OiQ">
                                                    <rect key="frame" x="15" y="0.0" width="570" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
